# crab-dlna

./: Cargo.toml  README.md
examples/: full_demo.rs  get_position.rs  interactive_control.rs  list.rs  play.rs  playlist_demo.rs  tui_demo.rs
src/: cli.rs  config.rs  devices.rs  dlna.rs  error.rs  keyboard.rs  lib.rs  main.rs  playlist.rs  streaming.rs  subtitle_sync.rs  tui.rs  types.rs  utils.rs
src/cli/: args.rs
src/cli/commands/: list.rs  mod.rs  play.rs
src/config/: constants.rs  types.rs
src/devices/: discovery.rs  mod.rs  render.rs  types.rs
src/dlna/: actions.rs  metadata.rs  mod.rs  playback.rs
src/media/: mod.rs  playlist.rs  streaming.rs  subtitle_sync.rs
src/tui/: app.rs  events.rs  mod.rs
src/tui/ui/: components.rs  dialogs.rs  layout.rs  mod.rs
src/utils/: formatting.rs  media.rs  mod.rs  network.rs  time.rs
templates/: didl_lite_with_subtitles.xml  didl_lite_without_subtitles.xml  set_av_transport_uri.xml
