[package]
name = "crab-dlna"
version = "0.2.1"
authors = ["Gabriel Magno <gabrielmagno1@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gabrielmagno/crab-dlna"
homepage = "https://github.com/gabrielmagno/crab-dlna"
description = "A minimal UPnP/DLNA media streamer"
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
keywords = ["dlna", "upnp", "cli", "stream", "video"]
edition = "2024"

[dependencies]
log = "0.4.27"
pretty_env_logger = "0.5.0"
futures = "0.3.31"
tokio = { version = "1.47.0", features = ["full"] }
pin-utils = "0.1.0"
xml-rs = "0.8.27"
http = "1.3.1"
rupnp = "3.0.0"
local-ip-address = "0.6.5"
warp = "0.3.7"
clap = { version = "4.5.42", features = ["derive"] }
slugify = "0.1.0"

futures-util = { version = "0.3.31", default-features = false }
ssdp-client = "2.1.0"

[profile.release]
strip = true
