[package]
name = "crab-dlna"
version = "0.2.1"
authors = ["Gabriel Magno <gabrielmagno1@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gabrielmagno/crab-dlna"
homepage = "https://github.com/gabrielmagno/crab-dlna"
description = "A minimal UPnP/DLNA media streamer"
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
keywords = ["dlna", "upnp", "cli", "stream", "video"]
edition = "2024"
readme = "README.md"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
pin-utils = "0.1.0"

# Logging
log = "0.4.27"
simple_logger = "5.0.0"

# Command line interface
clap = { version = "4.5.42", features = ["derive"] }

# Terminal and keyboard input
crossterm = "0.28.1"
ratatui = "0.28.1"
tui-input = "0.10.1"

# Network and UPnP/DLNA
rupnp = "3.0.0"
ssdp-client = "2.1.0"
local-ip-address = "0.6.5"
warp = "0.3.7"
http = "1.3.1"

# XML processing
xml-rs = "0.8.27"

# Subtitle processing
subparse = "0.7.0"

# Utilities
slugify = "0.1.0"
arboard = "3.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
